Bug 968237 - Use a pref to set the threshold of the event loop lag tracker. r=ted